Refactor2.3